# news-org-system

./: .env.example  .gitignore  CLAUDE.md  README.api.md  README.md  pyproject.toml
ai_docs/: README.md  dart_fss_agent_api_quickref.md
ai_docs/ai/: langchain-integration-plan.md
ai_docs/api/: endpoint-reference.md
ai_docs/architecture/: adapter-pattern.md  design-decisions.md  layers.md
ai_docs/development/: adding-sources.md  service-extension.md
ai_docs/operations/: deployment.md
openspec/changes/archive/2026-03-20-add-fastapi-service-layer/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-20-add-fastapi-service-layer/specs/article-query/: spec.md
openspec/changes/archive/2026-03-26-refactor-registry-hardcoded-string/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-26-refactor-registry-hardcoded-string/specs/: README.md
openspec/specs/collection-stats/: spec.md
openspec/specs/news-collection-service/: spec.md
openspec/specs/rest-api/: spec.md
src/: __init__.py  news_api.py
src/news_org_system/: news_api.py
src/news_org_system/api/: __init__.py  dependencies.py  main.py
src/news_org_system/api/models/: __init__.py  articles.py  collection.py  common.py  stats.py
src/news_org_system/api/routes/: __init__.py  collection.py  health.py  query.py  stats.py
src/news_org_system/readers/: __init__.py  base_reader.py  constants.py  registry.py  rss_reader.py
src/news_org_system/readers/adapters/: maeil_adapter.py
src/news_org_system/readers/models/: rss_config.py  site_config.py
src/news_org_system/services/: __init__.py  collection.py  query.py  stats.py
src/news_org_system/storage/: __init__.py  mongo_store.py
src/readers/: __init__.py  base_reader.py  dart_reader.py  rss_reader.py
src/readers/adapters/: __init__.py  base.py  default_adapter.py  etnews_adapter.py  yonhap_adapter.py
src/readers/models/: __init__.py
src/storage/: mongo_store.py
test_library_script/: check_content_quality.py  debug_rss_feed.py  test_mongo_connection.py  test_trafilatura_comparison.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_api_collection.py  test_api_query.py  test_api_stats.py  test_rss_feeds.py  test_rss_to_mongo.py
tests/unit/: __init__.py  test_adapters.py  test_collection_service.py  test_models.py  test_query_service.py  test_registry.py  test_stats_service.py
