[project]
name = "news-org-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.12",
    "langchain-core>=1.2.18",
    "langchain-openai>=1.1.11",
    "pip>=26.0.1",
    "pymongo>=4.16.0",
    "spacy>=3.8.11",
    "transformers>=5.3.0",
]
